--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
       <div class="row pt-2 pb-2">
         <div class="col-12">
           <h1>Fresh Arrivals</h1>
+          <a class="float-right" href="./catalogue.html">See All</a>
         </div>
       </div>
       <div>
@@ -238,7 +239,7 @@
           <li class="col-6 col-md-2 fresh-arrival-div">
             <div class="fresh-arrival-img-div">
               <img
-                src="./images/ToKillAMockingBird.jpg"
+                src="https://images-na.ssl-images-amazon.com/images/I/51Z9p5AecCL._SX307_BO1,204,203,200_.jpg"
                 alt="To Kill A Mocking Bird"
                 class="img-thumbnail img-fluid"
               />
@@ -255,7 +256,7 @@
           <li class="col-6 col-md-2 fresh-arrival-div">
             <div class="fresh-arrival-img-div">
               <img
-                src="./images/fahrenheit451.jpg"
+                src="https://upload.wikimedia.org/wikipedia/en/d/db/Fahrenheit_451_1st_ed_cover.jpg"
                 alt="Fahrenheit 451"
                 class="img-thumbnail img-fluid"
               />
@@ -272,7 +273,7 @@
           <li class="col-6 col-md-2 fresh-arrival-div">
             <div class="fresh-arrival-img-div">
               <img
-                src="./images/TheInstitute.jpg"
+                src="https://upload.wikimedia.org/wikipedia/en/0/00/The_Institute_%28King_novel%29.png"
                 alt="The Institute"
                 class="img-thumbnail img-fluid"
               />
@@ -289,7 +290,7 @@
           <li class="col-6 col-md-2 fresh-arrival-div">
             <div class="fresh-arrival-img-div">
               <img
-                src="./images/Killing Commendatore.jpg"
+                src="https://images-na.ssl-images-amazon.com/images/I/91LlffhyglL.jpg"
                 alt="Killing Commendatore"
                 class="img-thumbnail img-fluid"
               />
@@ -306,7 +307,7 @@
           <li class="col-6 col-md-2 fresh-arrival-div">
             <div class="fresh-arrival-img-div">
               <img
-                src="./images/Suheldev.jpg"
+                src="https://images-na.ssl-images-amazon.com/images/I/91HT7rB8tfL.jpg"
                 alt="Suheldev"
                 class="img-thumbnail img-fluid"
               />
@@ -325,7 +326,7 @@
           <li class="col-6 col-md-2 fresh-arrival-div">
             <div class="fresh-arrival-img-div">
               <img
-                src="./images/TroubledBlood.jpg"
+                src="https://upload.wikimedia.org/wikipedia/en/3/35/Troubled_Blood_by_Robert_Galbraith_%28JK_Rowling%29_-_book_cover.jpg"
                 alt="Troubled Blood"
                 class="img-thumbnail img-fluid"
               />
@@ -346,6 +347,7 @@
       <div class="row pb-3">
         <div class="col-12">
           <h1>Search by Authors</h1>
+          <a class="float-right" href="#">See All</a>
         </div>
       </div>
       <div>
@@ -417,6 +419,7 @@
       <div class="row">
         <div class="col-12">
           <h1>Search by Genre</h1>
+          <a class="float-right" href="#">See All</a>
         </div>
       </div>
       <div>
@@ -529,8 +532,18 @@
       </div>
     </footer>
 
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./node_modules/popper.js/dist/popper.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script
+      type="text/javascript"
+      src="./node_modules/jquery/dist/jquery.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="./node_modules/popper.js/dist/umd/popper.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="./node_modules/bootstrap/dist/js/bootstrap.min.js"
+    ></script>
+    <script type="text/javascript" src="./books.js"></script>
   </body>
 </html>
