--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Catalogue</title>
+    <title>Cart</title>
     <link
       rel="stylesheet"
       href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
@@ -44,12 +44,12 @@
                 ><span class="fa fa-info fa-lg"></span> About</a
               >
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="./catalogue.html"
                 ><span class="fa fa-book fa-lg"></span> Catalogue</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="./cart.html"
                 ><span class="fa fa-shopping-cart fa-lg"></span> Cart</a
               >
@@ -64,103 +64,6 @@
         </div>
       </div>
     </nav>
-
-    <div id="loginModal" class="modal fade" role="dialog">
-      <div class="modal-dialog modal-lg" role="content">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h4 class="modal-title">Login</h4>
-            <button type="button" class="close" data-dismiss="modal">
-              &times;
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-row">
-                <div class="form-group col-sm-4">
-                  <label class="sr-only" for="exampleInputEmail3">
-                    Email address</label
-                  >
-                  <input
-                    type="email"
-                    class="form-control form-control-sm mr-1"
-                    id="exampleInputEmail3"
-                    placeholder="Enter email"
-                  />
-                </div>
-                <div class="form-group col-sm-4">
-                  <label class="sr-only" for="exampleInputPassword3"
-                    >Password</label
-                  >
-                  <input
-                    type="password"
-                    class="form-control form-control-sm mr-1"
-                    id="exampleInputPassword3"
-                    placeholder="Password"
-                  />
-                </div>
-                <div class="col-sm-auto">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" />
-                    <label class="form-check-label"> Remember me </label>
-                  </div>
-                </div>
-              </div>
-              <div class="form-row">
-                <button
-                  type="button"
-                  class="btn btn-secondary btn-sm ml-auto"
-                  data-dismiss="modal"
-                >
-                  Cancel
-                </button>
-                <button type="submit" class="btn btn-primary btn-sm ml-1">
-                  Sign in
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-12 p-0 mt-1">
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="search"
-                ><i class="fa fa-search fa-lg"></i
-              ></span>
-            </div>
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Search Books"
-              id="book-search"
-            />
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <ol class="col-12 breadcrumb">
-          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-          <li class="breadcrumb-item active">Contact Us</li>
-        </ol>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row pt-2 pb-2">
-        <div class="col-12">
-          <h1>Catalogue</h1>
-        </div>
-      </div>
-      <div class="books-container"></div>
-    </div>
 
     <footer class="pt-4">
       <div class="container">
@@ -228,18 +131,5 @@
         </div>
       </div>
     </footer>
-    <script
-      type="text/javascript"
-      src="./node_modules/jquery/dist/jquery.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="./node_modules/popper.js/dist/umd/popper.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="./node_modules/bootstrap/dist/js/bootstrap.min.js"
-    ></script>
-    <script type="text/javascript" src="./books.js"></script>
   </body>
 </html>
