--- a/index.html
+++ b/index.html
@@ -79,24 +79,20 @@
             <form>
               <div class="form-row">
                 <div class="form-group col-sm-4">
-                  <label class="sr-only" for="exampleInputEmail3">
-                    Email address</label
-                  >
+                  <label class="sr-only" for="username"> Username</label>
                   <input
-                    type="email"
+                    type="text"
                     class="form-control form-control-sm mr-1"
-                    id="exampleInputEmail3"
-                    placeholder="Enter email"
+                    id="username"
+                    placeholder="Enter username"
                   />
                 </div>
                 <div class="form-group col-sm-4">
-                  <label class="sr-only" for="exampleInputPassword3"
-                    >Password</label
-                  >
+                  <label class="sr-only" for="password">Password</label>
                   <input
                     type="password"
                     class="form-control form-control-sm mr-1"
-                    id="exampleInputPassword3"
+                    id="password"
                     placeholder="Password"
                   />
                 </div>
@@ -115,7 +111,11 @@
                 >
                   Cancel
                 </button>
-                <button type="submit" class="btn btn-primary btn-sm ml-1">
+                <button
+                  type="submit"
+                  class="btn btn-primary btn-sm ml-1"
+                  id="sign-in"
+                >
                   Sign in
                 </button>
               </div>
@@ -133,7 +133,7 @@
               <div class="carousel-item active">
                 <img
                   class="d-block d-md-inline img-fluid mx-auto mx-md-0 carousel-image"
-                  src="./images/animalfarm.jpg"
+                  src="https://images-na.ssl-images-amazon.com/images/I/4150IkIpANL._SX303_BO1,204,203,200_.jpg"
                   alt="Animal Farm"
                 />
                 <img
@@ -159,7 +159,7 @@
               <div class="carousel-item">
                 <img
                   class="d-block d-md-inline img-fluid mx-auto mx-md-0 carousel-image"
-                  src="./images/fahrenheit451.jpg"
+                  src="https://upload.wikimedia.org/wikipedia/en/d/db/Fahrenheit_451_1st_ed_cover.jpg"
                   alt="Fahrenheit 451"
                 />
                 <img
@@ -179,7 +179,7 @@
               <div class="carousel-item">
                 <img
                   class="d-block d-md-inline img-fluid mx-auto mx-md-0 carousel-image"
-                  src="./images/Catch22.jpg"
+                  src="https://upload.wikimedia.org/wikipedia/en/9/99/Catch22.jpg"
                   alt="Catch 22"
                 />
                 <img
@@ -202,9 +202,18 @@
                 data-target="#mycarousel"
                 data-slide-to="0"
                 class="active"
+                style="background-color: black"
               ></li>
-              <li data-target="#mycarousel" data-slide-to="1"></li>
-              <li data-target="#mycarousel" data-slide-to="2"></li>
+              <li
+                data-target="#mycarousel"
+                style="background-color: black"
+                data-slide-to="1"
+              ></li>
+              <li
+                data-target="#mycarousel"
+                style="background-color: black"
+                data-slide-to="2"
+              ></li>
             </ol>
             <a
               class="carousel-control-prev"
@@ -347,7 +356,7 @@
       <div class="row pb-3">
         <div class="col-12">
           <h1>Search by Authors</h1>
-          <a class="float-right" href="#">See All</a>
+          <a class="float-right" href="./catalogue.html">See All</a>
         </div>
       </div>
       <div>
@@ -357,7 +366,8 @@
               <img
                 src="./images/GeorgeOrwell.jpg"
                 alt="George Orwell"
-                class="img-fluid"
+                class="img-fluid author-img"
+                data-author="George Orwell"
               />
             </div>
             <span>George Orwell</span>
@@ -367,7 +377,8 @@
               <img
                 src="./images/NeilGaiman.jpg"
                 alt="Neil Gaiman"
-                class="img-fluid"
+                class="img-fluid author-img"
+                data-author="Neil Gaiman"
               />
             </div>
             <span>Neil Gaiman</span>
@@ -377,7 +388,8 @@
               <img
                 src="./images/SalmanRushdie.jpg"
                 alt="Salman Rushdie"
-                class="img-fluid"
+                class="img-fluid author-img"
+                data-author="Salman Rushdie"
               />
             </div>
             <span>Salman Rushdie</span>
@@ -387,7 +399,8 @@
               <img
                 src="./images/CharlesDickens.jpg"
                 alt="Charles Dickens"
-                class="img-fluid"
+                class="img-fluid author-img"
+                data-author="Charles Dickens"
               />
             </div>
             <span>Charles Dickens</span>
@@ -397,7 +410,8 @@
               <img
                 src="./images/JKRowling.jpg"
                 alt="J K Rowling"
-                class="img-fluid"
+                class="img-fluid author-img"
+                data-author="J K Rowling"
               />
             </div>
             <span>J K Rowling</span>
@@ -407,7 +421,8 @@
               <img
                 src="./images/Amish Tripathi.jpg"
                 alt="Amish Tripathi"
-                class="img-fluid"
+                class="img-fluid author-img"
+                data-author="Amish Tripathi"
               />
             </div>
             <span>Amish Tripathi</span>
@@ -419,44 +434,48 @@
       <div class="row">
         <div class="col-12">
           <h1>Search by Genre</h1>
-          <a class="float-right" href="#">See All</a>
+          <a class="float-right" href="./catalogue.html">See All</a>
         </div>
       </div>
       <div>
         <ul class="row align-items-center">
           <li class="col-6 col-md-2 emoji-list-item">
             <div class="emoji-div">
-              <i class="fa fa-smile-o fa-5x"></i>
+              <i class="fa fa-smile-o fa-5x emoji" data-genre="Comedy"></i>
             </div>
             <span>Comedy</span>
           </li>
           <li class="col-6 col-md-2 emoji-list-item">
             <div class="emoji-div">
-              <i class="fa fa-heart fa-5x"></i>
+              <i class="fa fa-heart fa-5x emoji" data-genre="Romance"></i>
             </div>
             <span>Romance</span>
           </li>
           <li class="col-6 col-md-2 emoji-list-item">
             <div class="emoji-div">
-              <i class="fa fa-frown-o fa-5x"></i>
+              <i class="fa fa-frown-o fa-5x emoji" data-genre="Tragedy"></i>
             </div>
             <span>Tragedy</span>
           </li>
           <li class="col-6 col-md-2 emoji-list-item">
             <div class="emoji-div">
-              <i class="fi-xnlux7-robot" style="margin-top: -1rem"></i>
+              <i
+                class="fi-xnlux7-robot emoji"
+                data-genre="Sci-Fi"
+                style="margin-top: -1rem"
+              ></i>
             </div>
             <span style="margin-top: -1rem">Sci-Fi</span>
           </li>
           <li class="col-6 col-md-2 emoji-list-item">
             <div class="emoji-div">
-              <i class="fa fa-bomb fa-5x"></i>
+              <i class="fa fa-bomb fa-5x emoji" data-genre="Crime"></i>
             </div>
             <span>Crime</span>
           </li>
           <li class="col-6 col-md-2 emoji-list-item">
             <div class="emoji-div">
-              <i class="fa fa-fighter-jet fa-5x"></i>
+              <i class="fa fa-fighter-jet fa-5x emoji" data-genre="War"></i>
             </div>
             <span>War</span>
           </li>
@@ -544,6 +563,7 @@
       type="text/javascript"
       src="./node_modules/bootstrap/dist/js/bootstrap.min.js"
     ></script>
-    <script type="text/javascript" src="./books.js"></script>
+    <script src="./catalogue.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
