--- a/cart.html
+++ b/cart.html
@@ -65,6 +65,27 @@
       </div>
     </nav>
 
+    <div class="container">
+      <div class="row">
+        <ol class="col-12 breadcrumb">
+          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+          <li class="breadcrumb-item active">Cart</li>
+        </ol>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row pt-2 pb-2">
+        <div class="col-12">
+          <h1 class="page-title">Cart</h1>
+          <hr />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <ul class="cart-container row"></ul>
+    </div>
+
     <footer class="pt-4">
       <div class="container">
         <div class="row">
@@ -131,5 +152,21 @@
         </div>
       </div>
     </footer>
+    <script
+      type="text/javascript"
+      src="./node_modules/jquery/dist/jquery.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="./node_modules/popper.js/dist/umd/popper.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="./node_modules/bootstrap/dist/js/bootstrap.min.js"
+    ></script>
+    <script src="./catalogue.js"></script>
+    <script src="./shoppingBag.js"></script>
+    <script src="./cart.js"></script>
+    <script src="./bag.js"></script>
   </body>
 </html>
