--- a/catalogue.html
+++ b/catalogue.html
@@ -45,7 +45,7 @@
               >
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="./catalogue.html"
+              <a class="nav-link" href="#"
                 ><span class="fa fa-book fa-lg"></span> Catalogue</a
               >
             </li>
@@ -55,74 +55,9 @@
               >
             </li>
           </ul>
-          <span class="navbar-text">
-            <a id="login" data-toggle="modal" data-target="#loginModal">
-              <span class="fa fa-sign-in"></span>
-              Login
-            </a>
-          </span>
         </div>
       </div>
     </nav>
-
-    <div id="loginModal" class="modal fade" role="dialog">
-      <div class="modal-dialog modal-lg" role="content">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h4 class="modal-title">Login</h4>
-            <button type="button" class="close" data-dismiss="modal">
-              &times;
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-row">
-                <div class="form-group col-sm-4">
-                  <label class="sr-only" for="exampleInputEmail3">
-                    Email address</label
-                  >
-                  <input
-                    type="email"
-                    class="form-control form-control-sm mr-1"
-                    id="exampleInputEmail3"
-                    placeholder="Enter email"
-                  />
-                </div>
-                <div class="form-group col-sm-4">
-                  <label class="sr-only" for="exampleInputPassword3"
-                    >Password</label
-                  >
-                  <input
-                    type="password"
-                    class="form-control form-control-sm mr-1"
-                    id="exampleInputPassword3"
-                    placeholder="Password"
-                  />
-                </div>
-                <div class="col-sm-auto">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" />
-                    <label class="form-check-label"> Remember me </label>
-                  </div>
-                </div>
-              </div>
-              <div class="form-row">
-                <button
-                  type="button"
-                  class="btn btn-secondary btn-sm ml-auto"
-                  data-dismiss="modal"
-                >
-                  Cancel
-                </button>
-                <button type="submit" class="btn btn-primary btn-sm ml-1">
-                  Sign in
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div class="container">
       <div class="row">
@@ -155,8 +90,9 @@
 
     <div class="container">
       <div class="row pt-2 pb-2">
-        <div class="col-12">
+        <div class="col-12 head-to-cart-header">
           <h1 class="page-title">Catalogue</h1>
+          <a href="./cart.html"><h5 class="float-right">Head to Cart</h5></a>
         </div>
       </div>
       <div class="books-container"></div>
@@ -242,6 +178,8 @@
     ></script>
 
     <script src="./catalogue.js"></script>
+    <script src="./shoppingBag.js"></script>
     <script src="./books.js"></script>
+    <script src="./cart.js"></script>
   </body>
 </html>
