--- a/cart.html
+++ b/cart.html
@@ -76,9 +76,8 @@
 
     <div class="container">
       <div class="row pt-2 pb-2">
-        <div class="col-12">
+        <div class="col-12 proceed-to-checkout">
           <h1 class="page-title">Cart</h1>
-          <hr />
         </div>
       </div>
     </div>
